--- a/pastevents.html
+++ b/pastevents.html
@@ -116,13 +116,8 @@
   crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-  <script src="./js/APIconect.js"></script>
-  <!-- <script src="./js/data.js"></script> -->
 
-  <script src="./js/template_checks_search.js"></script>
-  <script src="./js/template_gridcards.js"></script>
-
-  <script src="./js/filters_search.js"></script>
+  <script src="./js/cards.js"></script>
 
 
 </body>
