--- a/stats.html
+++ b/stats.html
@@ -65,9 +65,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>  500 </td>
-                <td>  200 </td>
-                <td>  18 </td>
+                <td id="max-att">  500 </td>
+                <td id="min-att">  200 </td>
+                <td id="max-cap">  18 </td>
             </tr>
           </tbody>
       </table>
@@ -171,6 +171,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+
+    <script src="./js/stats.js"></script>
 </body>
 
 </html>
