--- a/stats.html
+++ b/stats.html
@@ -65,9 +65,9 @@
         </thead>
         <tbody>
             <tr>
-                <td id="max-att">  500 </td>
-                <td id="min-att">  200 </td>
-                <td id="max-cap">  18 </td>
+                <td id="max-att">  loading... </td>
+                <td id="min-att">  loading... </td>
+                <td id="max-cap">  loading... </td>
             </tr>
           </tbody>
       </table>
@@ -83,22 +83,8 @@
                 <th>Percentage of attendance</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>  500 </td>
-                <td>  200 </td>
-                <td>  18 </td>
-            </tr>
-            <tr>
-              <td>  500 </td>
-              <td>  200 </td>
-              <td>  18 </td>
-          </tr>
-          <tr>
-            <td>  500 </td>
-            <td>  200 </td>
-            <td>  18 </td>
-        </tr>
+        <tbody id="upcomingStat">
+            
           </tbody>
       </table>
 
@@ -115,29 +101,29 @@
       </thead>
       <tbody>
           <tr>
-              <td>  500 </td>
-              <td>  200 </td>
-              <td>  18 </td>
+              <td>  loading... </td>
+              <td>  loading... </td>
+              <td>  loading... </td>
           </tr>
           <tr>
-            <td>  500 </td>
-            <td>  200 </td>
-            <td>  18 </td>
+            <td>  loading... </td>
+            <td>  loading... </td>
+            <td>  loading... </td>
         </tr>
         <tr>
-          <td>  500 </td>
-          <td>  200 </td>
-          <td>  18 </td>
+          <td>  loading... </td>
+          <td>  loading... </td>
+          <td>  loading... </td>
       </tr>
       <tr>
-        <td>  500 </td>
-        <td>  200 </td>
-        <td>  18 </td>
+        <td>  loading... </td>
+        <td>  loading... </td>
+        <td>  loading... </td>
       </tr>
       <tr>
-        <td>  500 </td>
-        <td>  200 </td>
-        <td>  18 </td>
+        <td>  loading... </td>
+        <td>  loading... </td>
+        <td>  loading... </td>
       </tr>
         </tbody>
       </table>
@@ -172,6 +158,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
+    <!-- <script src="./js/cards.js"></script> -->
     <script src="./js/stats.js"></script>
 </body>
 
